<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.ServeriSalvestusActivity">

    <item
        android:id="@+id/action_done"
        android:title="@string/action_done"
        android:icon="@drawable/ic_done_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_ready"
        android:title="@string/action_save_server"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_servers"
        android:title="@string/action_delete_servers" />

</menu>