<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".view.MainActivity"
    tools:showIn="@layout/activity_main">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_save"
            android:id="@+id/switch_save"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_scramble"
            android:id="@+id/switch_scramble"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:id="@+id/info"
            android:gravity="center_horizontal"
            android:layout_margin="20dp"
            android:layout_below="@+id/switch_scramble"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pin_entry"
            android:layout_below="@+id/switch_scramble"
            android:layout_centerHorizontal="true"
            android:inputType="number"
            android:gravity="center"
            android:editable="true"
            android:maxLength="12"
            android:layout_marginTop="50dp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/pin_entry"
            android:layout_alignBottom="@id/pin_entry"
            android:layout_alignRight="@id/pin_entry"
            android:id="@+id/delete"
            android:src="@drawable/ic_backspace_black_24dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/pin_entry"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_centerHorizontal="true">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button1"
                android:src="@drawable/ic_1"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:id="@+id/button2"
                android:src="@drawable/ic_2"
                android:textSize="45dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:id="@+id/button3"
                android:src="@drawable/ic_3"
                android:textSize="45dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:id="@+id/button4"
                android:src="@drawable/ic_4"
                android:textSize="45dp"
                android:layout_below="@+id/button1"
                android:layout_alignParentStart="true"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5"
                android:id="@+id/button5"
                android:src="@drawable/ic_5"
                android:textSize="45dp"
                android:layout_below="@+id/button1"
                android:layout_centerHorizontal="true"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6"
                android:id="@+id/button6"
                android:textSize="45dp"
                android:layout_below="@+id/button1"
                android:src="@drawable/ic_6"
                android:layout_alignParentEnd="true"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7"
                android:id="@+id/button7"
                android:src="@drawable/ic_7"
                android:textSize="45dp"
                android:layout_below="@+id/button4"
                android:layout_alignParentStart="true"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8"
                android:id="@+id/button8"
                android:src="@drawable/ic_8"
                android:textSize="45dp"
                android:layout_below="@+id/button4"
                android:layout_centerHorizontal="true"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9"
                android:id="@+id/button9"
                android:src="@drawable/ic_9"
                android:textSize="45dp"
                android:layout_below="@+id/button4"
                android:layout_alignParentEnd="true"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/button10"
                android:src="@drawable/ic_10"
                android:textSize="45dp"
                android:layout_below="@+id/button7"
                android:layout_centerHorizontal="true"
                style="?android:attr/borderlessButtonStyle"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="confirm"
                android:id="@+id/buttonConfirm"
                android:src="@drawable/ic_confirm"
                android:textSize="45dp"
                android:layout_below="@+id/button8"
                android:layout_toEndOf="@+id/button8"
                android:layout_alignParentEnd="true"
                style="?android:attr/borderlessButtonStyle"
                android:layout_alignStart="@+id/button9" />


        </RelativeLayout>


    </RelativeLayout>
</RelativeLayout>
